ActionButton: fixed `vertical-align` for `multi-action` class

--- a/source/components/action-button/action-button.less
+++ b/source/components/action-button/action-button.less
@@ -67,6 +67,7 @@
 
 .multi-action {
     display: inline-block;
+    vertical-align: middle;
     position: relative;
     .square(56, px);
 }
